Fixing alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   background-size: cover;
   font-family: "Satoshi-Regular";
   color: var(--font-color);
+  margin: 0;
 }
 
 h2 {
@@ -91,12 +92,18 @@ h4{
   outline-color: #6d4aff;
  }
 
-.grid-container {
+ .main-container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+ }
+
+.container {
   display: flex;
   flex-wrap: wrap;
-  width: 90%;
-  height: 90%;
-  margin: 0 auto;
+  margin: 50px;
+  height: 80vh;
   /* grid-template-columns: 25% 80%;
   grid-template-areas: "sidebar main"; */
   border-radius: var(--border-radius);
